[package]
name = "web_basic_01"
version = "0.1.0"
authors = ["zhangjunfang <zhangjunfang0505@163.com>"]

[dependencies]
actix-redis = "0.5.1"
actix-web = "0.7"
actix = "0.7"
log = "0.4.0"
futures = "0.1.23"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
http = "0.1"
dotenv = "0.10"
env_logger = "0.5"